<resources>
    <string name="app_name">Re:Food</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button_text">LOG IN</string>
    <string name="register_button_text">SIGN UP</string>
    <string name="separator_text">OR</string>
    <string name="login_appbar_text">Login to Re:Food</string>
    <string name="register_appbar_text">Register</string>
    <string name="bio_placeholder">A shot bio</string>
    <string name="username_placeholder">Username</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="set_display_picture">Set Display Picture</string>
    <string name="profile_appbar_text" />
    <string name="logout_text">LOG OUT</string>
    <string name="homepage_appbar_text" />
    <string name="re_food">re:Food</string>
    <string name="welcome_back">Welcome back</string>
    <string name="day_streak_template">%1$d day streak!</string>
    <string name="coins_template">\t $ %1$d \t \t</string>
    <string name="food_profile_text">Food Profile</string>
    <string name="zem_garden_text">Zem\nGarden</string>
    <string name="exercise_text">No-Go\nTraining</string>
    <string name="stats_text">Stats</string>
    <string name="start_exercise_text">Start!</string>
    <string name="round_transition_text">Next Round!</string>
    <string name="increment_feedback_text">+ %1$d</string>
    <string name="decrement_feedback_text">- %1$d</string>
    <string name="game_end_text">Restart!</string>
    <string name="next_survey">Next Survey</string>
    <string name="notification_placeholder">Notification</string>
    <string name="notification_timing_placeholder">Timing</string>
    <string name="time_save">Save Notification Time</string>
    <string name="biometrics_optional_description">The following questions are OPTIONAL</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="tab_text_1">Biometrics</string>
    <string name="tab_text_2">Questionnaire</string>
    <string name="refood_survey_text">reFood Survey</string>
    <string name="sex">Select Sex</string>
    <string name="age_placeholder">Age</string>
    <string name="sex_placeholder">Sex</string>
    <string name="weight_placeholder">Weight (kg)</string>
    <string name="next_text">Next</string>
    <string name="survey_title_text">re:Food Survey</string>
    <string name="survey_description">In the past week...</string>
    <string name="survey_q1_question">I felt in control over my eating</string>
    <string name="strongly_disagree">Strongly Disagree</string>
    <string name="disagree">Disagree</string>
    <string name="neutral">Neutral</string>
    <string name="agree">Agree</string>
    <string name="strongly_agree">Strongly Agree</string>
    <string name="survey_q2_question">I have avoided eating when not-hungry</string>
    <string name="survey_q3_question">I couldn\'t resist my favorite foods</string>
    <string name="survey_q4_question">I snacked quite a lot</string>
    <string name="finish_survey_text">Finish</string>
    <string name="go_to_weekly_survey">Go To Weekly Survey</string>
    <string name="next_survey_placeholder">%1$d days</string>
    <string name="level_template">LEVEL %1$d</string>
    <string name="click_here_to_reset">Click Here To Reset</string>
    <string name="set_notification_time">Set Notification Time</string>
    <string name="collapse_time_picker">Collapse Time Picker</string>
    <string name="resource_title_text">Resource Center</string>
    <string name="next_tip">Next Tip</string>
    <string-array name="sex_list">
        <item>Prefer not to say</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="select_level_options">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    />
</resources>