<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextRegisterEmailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_side_margin"
                android:layout_marginLeft="@dimen/default_side_margin"
                android:layout_marginTop="@dimen/default_top_margin"
                android:layout_marginEnd="@dimen/default_side_margin"
                android:layout_marginRight="@dimen/default_side_margin"
                android:ems="10"
                android:hint="@string/email_placeholder"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextRegisterPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_side_margin"
                android:layout_marginLeft="@dimen/default_side_margin"
                android:layout_marginTop="@dimen/default_top_margin"
                android:layout_marginEnd="@dimen/default_side_margin"
                android:layout_marginRight="@dimen/default_side_margin"
                android:ems="10"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextRegisterEmailAddress" />

            <EditText
                android:id="@+id/editTextRegisterConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_side_margin"
                android:layout_marginLeft="@dimen/default_side_margin"
                android:layout_marginTop="@dimen/default_top_margin"
                android:layout_marginEnd="@dimen/default_side_margin"
                android:layout_marginRight="@dimen/default_side_margin"
                android:ems="10"
                android:hint="@string/confirm_password_placeholder"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />

            <EditText
                android:id="@+id/editTextRegisterUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_side_margin"
                android:layout_marginLeft="@dimen/default_side_margin"
                android:layout_marginTop="@dimen/default_top_margin"
                android:layout_marginEnd="@dimen/default_side_margin"
                android:layout_marginRight="@dimen/default_side_margin"
                android:ems="10"
                android:hint="@string/username_placeholder"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextRegisterConfirmPassword" />

            <Button
                android:id="@+id/newRegister_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_top_margin"
                android:layout_marginEnd="@dimen/default_top_margin"
                android:layout_marginRight="@dimen/default_top_margin"
                android:onClick="DoRegister"
                android:text="@string/register_button_text"
                app:backgroundTint="@color/common_google_signin_btn_text_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextRegisterUsername" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>