<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BiometricsActivity">

    <TextView
        android:id="@+id/bio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/biometrics_optional_description"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bio_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <NumberPicker
                android:id="@+id/numberPickerBioAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_top_margin"
                android:layout_marginStart="@dimen/default_side_margin"
                app:layout_constraintStart_toEndOf="@+id/textBioAgeHeader"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textBioAgeHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/age_placeholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/bio_header_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/numberPickerBioAge"
                app:layout_constraintBottom_toBottomOf="@+id/numberPickerBioAge" />

            <Spinner
                android:id="@+id/spinnerBioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_side_margin"
                android:entries="@array/sex_list"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textBioSexHeader"
                app:layout_constraintStart_toEndOf="@+id/textBioSexHeader"
                app:layout_constraintTop_toTopOf="@+id/textBioSexHeader" />

            <TextView
                android:id="@+id/textBioSexHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_top_margin"
                android:background="@color/black"
                android:text="@string/sex_placeholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/bio_header_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberPickerBioAge" />

            <NumberPicker
                android:id="@+id/numberPickerBioWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_top_margin"
                android:layout_marginStart="@dimen/default_side_margin"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/textBioSexHeader"
                app:layout_constraintStart_toEndOf="@+id/textBioWeightHeader" />

            <TextView
                android:id="@+id/textBioWeightHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/weight_placeholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/bio_header_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/numberPickerBioWeight"
                app:layout_constraintBottom_toBottomOf="@+id/numberPickerBioWeight" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bio_header_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <Button
                android:id="@+id/bioNextSurvey_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_top_margin"
                android:layout_marginEnd="@dimen/default_bottom_margin"
                android:onClick="SaveBiometrics"
                android:text="@string/next_text"
                app:backgroundTint="@color/common_google_signin_btn_text_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberPickerBioWeight" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>