<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity">

    <Button
        android:id="@+id/start_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/common_google_signin_btn_text_light"
        android:text="@string/start_exercise_text"
        android:onClick="startExercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exercise_coin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/coins_template"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/exercise_coin_image"
        app:layout_constraintEnd_toStartOf="@+id/exercise_coin_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exercise_coin_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/coin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cue_view"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:cropToPadding="true"
        android:onClick="countClick"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:srcCompat="@drawable/unhealthy_burger" />

    <TextView
        android:id="@+id/feedback_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/exercise_coin_text"
        app:layout_constraintStart_toStartOf="@+id/exercise_coin_text"
        app:layout_constraintTop_toBottomOf="@+id/exercise_coin_text" />

    <TextView
        android:id="@+id/exercise_xp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_template"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/xp_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_side_margin"
        android:indeterminate="false"
        android:max="120"
        android:minWidth="100dp"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="@+id/exercise_xp_text"
        app:layout_constraintStart_toEndOf="@+id/exercise_xp_text"
        app:layout_constraintTop_toTopOf="@+id/exercise_xp_text" />
</androidx.constraintlayout.widget.ConstraintLayout>